<resources>
    <string name="app_name">AppCentroProgresa</string>

    <string name="campTextName">Nombre</string>
    <string name="campTextEmail">Correo Electrónico</string>
    <string name="campTextPass">Contraseña</string>
    <string name="campTextCareer">Carrera</string>
    <string name="btnRegister">Registrar</string>

    <!-- Inicio de Sesion -->
    <string name="btnIncioSesion">Entrar</string>
    <string name="txtolvidastecontraseña">¿Olvidaste tu contraseña?</string>
    <string name="txtregistrarte">¿QUIERES REGISTRARTE?</string>

    <!-- Taller Virtual -->
    <string name="txtTitulo">PROCESO</string>
    <string name="txtInfo">Sigue todas las etapas para la Practica Profesional</string>
    <string name="txtTitulo2">TALLER VIRTUAL INDUCCIÓN</string>
    <string name="txtContenido">Ahora te debes dirigir a aulas virtuales para realizar el taller de inducción de la practica profesional.</string>
    <string name="opciontxt">He realizado el taller virtual de inducción de la practica completamente.</string>
    <string name="btnPrimero">ACCEDER AL TALLER</string>
    <string name="btnSegundo">ATRÁS</string>
    <string name="btnTercero">SIGUIENTE</string>

    <!-- Preinscripcion -->
    <string name="txtTituloPre">PREINSCRIPCIÓN</string>
    <string name="txtopcion">Autorización politica de tratamientos de datos personales.</string>
    <string name="btnCancelar">CANCELAR</string>
    <string name="campTextNameFull">Nombre Completo</string>
    <string name="campTextNDocumento">N° documento</string>
    <string name="campTextCeluar">Celular</string>
    <string name="campTextID">ID</string>
    <string name="campTextPeriodoAcademico">Periodo académico</string>
    <string name="campTextCreditos">Creditos aprobados</string>
    <string name="btnPreinscribir">PREINSCRIBIR</string>

    <!-- Clasificación -->
    <string name="txtTitleClassification">CLASIFICACIÓN</string>
    <string name="campTextCompleteName">Nombre Completo</string>
    <string name="campTextEntityDocument">N°documento</string>
    <string name="spinnerSeat">Sede</string>
    <string name="campTextAddress">Dirección de residencia</string>
    <string name="campTextCity">Ciudad</string>
    <string name="campTextNumContact">N°contacto</string>
    <string name="spinnerProgram">Programa</string>
    <string name="spinnerDisability">¿Tiene alguna discapacidad?</string>
    <string name="campTextIndicateDisability">Indique la discapacidad</string>
    <string name="spinnerSelectClassification">Selecciona la clasificación</string>
    <string name="btnToCancel">Cancelar</string>
    <string name="btnToSend">Enviar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Perfil -->
    <string name="txtNameUser">Cristian Alejandro Penagos Suárez</string>
    <string name="txtTitleProgram">Carrera</string>
    <string name="txtNameProgram">Ingeniería de Software</string>
    <string name="txtTitleEmail">Email</string>
    <string name="txtNameEmail">cristian.penagos-s@uniminuto.edu.co</string>
    <string name="txtTitleID">ID</string>
    <string name="txtID">000731058</string>
    <string name="txtTitlePhone">Teléfono</string>
    <string name="txtNumberPhone">310 342 3243</string>
    <string name="txtTitleIdentification">Identificación</string>
    <string name="txtNumberIndentification">11.222.22232</string>

</resources>