<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <!--    Barra de navegación-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:elevation="8dp"
        app:menu="@menu/bottom_navigation"
        app:labelVisibilityMode="labeled"
        style="@style/BottomNavigation"/>

    <!--    Es todo el linear layout de la interfaz-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--        Esta toda la parte de la imagen, el cuadro azul y el nombre-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/backgroundPerfil">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="191dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:src="@drawable/picture_profile" />

            <TextView
                android:id="@+id/textViewTitleClassification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/inter_variablefont_slnt_wght"
                android:gravity="center"
                android:hint="@string/txtNameUser"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--        Información de la persona-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingLeft="30dp"
            android:fontFamily="@font/inter_variablefont_slnt_wght"
            android:hint="@string/txtTitleProgram"
            android:textColor="@color/yellowAplicattion"
            android:textColorHint="@color/yellowAplicattion"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewNameCareer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:fontFamily="@font/inter_variablefont_slnt_wght"
            android:hint="@string/txtNameProgram"
            android:textColor="@color/letterBox"
            android:textSize="19dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="30dp"
            android:fontFamily="@font/inter_variablefont_slnt_wght"
            android:hint="@string/txtTitleEmail"
            android:textColor="@color/yellowAplicattion"
            android:textColorHint="@color/yellowAplicattion"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewNameEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:fontFamily="@font/inter_variablefont_slnt_wght"
            android:hint="@string/txtNameEmail"
            android:textColor="@color/letterBox"
            android:textSize="19dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="30dp"
            android:fontFamily="@font/inter_variablefont_slnt_wght"
            android:hint="@string/txtTitleID"
            android:textColor="@color/yellowAplicattion"
            android:textColorHint="@color/yellowAplicattion"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:fontFamily="@font/inter_variablefont_slnt_wght"
            android:hint="@string/txtID"
            android:textColor="@color/letterBox"
            android:textSize="19dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="30dp"
            android:fontFamily="@font/inter_variablefont_slnt_wght"
            android:hint="@string/txtTitlePhone"
            android:textColor="@color/yellowAplicattion"
            android:textColorHint="@color/yellowAplicattion"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:fontFamily="@font/inter_variablefont_slnt_wght"
            android:hint="@string/txtNumberPhone"
            android:textColor="@color/letterBox"
            android:textSize="19dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="30dp"
            android:fontFamily="@font/inter_variablefont_slnt_wght"
            android:hint="@string/txtTitleIdentification"
            android:textColor="@color/yellowAplicattion"
            android:textColorHint="@color/yellowAplicattion"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:fontFamily="@font/inter_variablefont_slnt_wght"
            android:hint="@string/txtNumberIndentification"
            android:textColor="@color/letterBox"
            android:textSize="19dp" />

    </LinearLayout>

</RelativeLayout>