<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="30dp"
    tools:context=".Clasificacion">

    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">-->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo_practiya" />

        <TextView
            android:id="@+id/textViewTitleClassification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_variablefont_slnt_wght"
            android:gravity="center"
            android:hint="@string/txtTitleClassification"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textFieldCompleteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rectangle"
            android:layout_marginTop="15dp"
            android:hint="@string/campTextCompleteName"
            android:paddingStart="10dp"
            android:fontFamily="@font/inter_variablefont_slnt_wght"
            android:textStyle="bold"
            android:textColor="@color/letterBox"
            android:textColorHint="@color/letterBox" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="69dp">

            <EditText
                android:id="@+id/textFieldEntityDocument"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_rectangle"
                android:fontFamily="@font/inter_variablefont_slnt_wght"
                android:hint="@string/campTextEntityDocument"
                android:paddingStart="10dp"
                android:textColor="@color/letterBox"
                android:textColorHint="@color/letterBox"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerSeat"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/textFieldEntityDocument"
                android:background="@drawable/ic_rectangle_spinner"
                android:fontFamily="@font/inter_variablefont_slnt_wght"
                android:hint="@string/spinnerSeat"
                android:paddingStart="0dp"
                android:textColor="@color/letterBox"
                android:textColorHint="@color/letterBox"
                android:textStyle="bold" />

        </RelativeLayout>

        <EditText
            android:id="@+id/textFieldAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rectangle"
            android:layout_marginTop="20dp"
            android:hint="@string/campTextAddress"
            android:paddingStart="10dp"
            android:fontFamily="@font/inter_variablefont_slnt_wght"
            android:textStyle="bold"
            android:textColor="@color/letterBox"
            android:textColorHint="@color/letterBox"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="69dp">

            <EditText
                android:id="@+id/textFieldCity"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_rectangle"
                android:layout_marginTop="20dp"
                android:hint="@string/campTextCity"
                android:paddingStart="10dp"
                android:fontFamily="@font/inter_variablefont_slnt_wght"
                android:textStyle="bold"
                android:textColor="@color/letterBox"
                android:textColorHint="@color/letterBox"/>

            <EditText
                android:id="@+id/textFieldNumContact"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/textFieldCity"
                android:background="@drawable/ic_rectangle"
                android:fontFamily="@font/inter_variablefont_slnt_wght"
                android:hint="@string/campTextNumContact"
                android:paddingStart="10dp"
                android:textColor="@color/letterBox"
                android:textColorHint="@color/letterBox"
                android:textStyle="bold" />

        </RelativeLayout>

        <Spinner
            android:id="@+id/spinnerProgram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_rectangle_spinner"
            android:fontFamily="@font/inter_variablefont_slnt_wght"
            android:hint="@string/spinnerProgram"
            android:paddingStart="0dp"
            android:textColor="@color/letterBox"
            android:textColorHint="@color/letterBox"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerDisability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_rectangle_spinner"
            android:fontFamily="@font/inter_variablefont_slnt_wght"
            android:hint="@string/spinnerDisability"
            android:paddingStart="0dp"
            android:textColor="@color/letterBox"
            android:textColorHint="@color/letterBox"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textFieldIndicateDisability"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/ic_rectangle"
            android:layout_marginTop="20dp"
            android:hint="@string/campTextIndicateDisability"
            android:paddingStart="10dp"
            android:fontFamily="@font/inter_variablefont_slnt_wght"
            android:textStyle="bold"
            android:textColor="@color/letterBox"
            android:textColorHint="@color/letterBox"/>

        <Spinner
            android:id="@+id/spinnerSelectClassification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_rectangle_spinner"
            android:fontFamily="@font/inter_variablefont_slnt_wght"
            android:hint="@string/spinnerSelectClassification"
            android:paddingStart="0dp"
            android:textColor="@color/letterBox"
            android:textColorHint="@color/letterBox"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/buttonToCancel"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@drawable/ic_botton_rectangule_yellow"
                android:fontFamily="@font/inter_variablefont_slnt_wght"
                android:text="@string/btnToCancel"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonToSend"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="32dp"
                android:layout_toEndOf="@+id/buttonToCancel"
                android:background="@drawable/ic_botton_rectangule_yellow"
                android:fontFamily="@font/inter_variablefont_slnt_wght"
                android:text="@string/btnToSend"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

        </RelativeLayout>

    <!--</ScrollView>-->

</LinearLayout>