<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Preinscripcion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_variablefont_slnt_wght"
                android:gravity="center"
                android:text="@string/txtTitulo"
                android:textSize="35sp"
                android:textStyle="bold"
                style="@style/Theme.AppCentroProgresaNight"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/txtInfo"
                android:fontFamily="@font/inter_variablefont_slnt_wght"
                android:gravity="center"
                android:textSize="13sp"
                android:textStyle="bold"
                style="@style/TextViewtxtInfo"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/txtTituloPre"
                android:layout_marginTop="70dp"
                android:textSize="35sp"
                android:gravity="center"
                android:fontFamily="@font/inter_variablefont_slnt_wght"
                android:textStyle="bold"
                style="@style/Theme.AppCentroProgresaNight"/>

            <CheckBox
                android:id="@+id/checkBoxAutorizacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtopcion"
                android:gravity="bottom"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:fontFamily="@font/inter_variablefont_slnt_wght"
                android:textSize="15sp"
                style="@style/Theme.AppCentroProgresaNight"/>

            <EditText
                android:id="@+id/NombreCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_rectangle"
                android:layout_marginTop="20dp"
                android:hint="@string/campTextNameFull"
                android:paddingStart="10dp"
                android:fontFamily="@font/inter_variablefont_slnt_wght"
                android:textStyle="bold"
                android:textColorHint="@color/letterBox"
                android:textColor="@color/letterBox"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerTipoDocumento"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_rectangle"
                    android:layout_marginTop="20dp"
                    android:paddingStart="10dp"
                    android:fontFamily="@font/inter_variablefont_slnt_wght"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nDocumento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_rectangle"
                    android:layout_marginTop="20dp"
                    android:hint="@string/campTextNDocumento"
                    android:layout_marginLeft="10dp"
                    android:paddingStart="10dp"
                    android:fontFamily="@font/inter_variablefont_slnt_wght"
                    android:textStyle="bold"
                    android:textColorHint="@color/letterBox"
                    android:textColor="@color/letterBox"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/celular"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_rectangle"
                    android:layout_marginTop="20dp"
                    android:hint="@string/campTextCeluar"
                    android:paddingStart="10dp"
                    android:fontFamily="@font/inter_variablefont_slnt_wght"
                    android:textStyle="bold"
                    android:textColorHint="@color/letterBox"
                    android:textColor="@color/letterBox"/>

                <EditText
                    android:id="@+id/ID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_rectangle"
                    android:layout_marginTop="20dp"
                    android:hint="@string/campTextID"
                    android:layout_marginLeft="10dp"
                    android:paddingStart="10dp"
                    android:fontFamily="@font/inter_variablefont_slnt_wght"
                    android:textStyle="bold"
                    android:textColorHint="@color/letterBox"
                    android:textColor="@color/letterBox"/>

            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerSede"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_rectangle"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:fontFamily="@font/inter_variablefont_slnt_wght"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerPrograma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_rectangle"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:fontFamily="@font/inter_variablefont_slnt_wght"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/PeriodoAcademico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_rectangle"
                    android:layout_marginTop="20dp"
                    android:hint="@string/campTextPeriodoAcademico"
                    android:paddingStart="10dp"
                    android:fontFamily="@font/inter_variablefont_slnt_wght"
                    android:textStyle="bold"
                    android:textColorHint="@color/letterBox"
                    android:textColor="@color/letterBox"/>

                <EditText
                    android:id="@+id/CreditosAprobados"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_rectangle"
                    android:layout_marginTop="20dp"
                    android:hint="@string/campTextCreditos"
                    android:paddingStart="10dp"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/inter_variablefont_slnt_wght"
                    android:textStyle="bold"
                    android:textColorHint="@color/letterBox"
                    android:textColor="@color/letterBox"/>

            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerEstadoPRS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_rectangle"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:fontFamily="@font/inter_variablefont_slnt_wght"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerSalud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_rectangle"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:fontFamily="@font/inter_variablefont_slnt_wght"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnCancelar"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_botton_rectangule_yellow"
                    android:fontFamily="@font/inter_variablefont_slnt_wght"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/btnPreinscribir"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnPreinscribir"
                    android:layout_marginStart="27dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_botton_rectangule_yellow"
                    android:fontFamily="@font/inter_variablefont_slnt_wght"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>